[tool.poetry]
name = "python-advanced"
version = "0.1.0"
description = ""
authors = ["Jade <jade@studypie.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
